Upgrade to Java 17 and higher (#173)
* Code is now (at least) compatible with Java 17 and 21
* Bump many deps
* Upgrade GitHub Actions: setup-node, setup-java